--- a/res/static/css/user.page.css
+++ b/res/static/css/user.page.css
@@ -8,6 +8,7 @@
 
 #profile-pic {
   --SIZE: 7rem;
+  object-fit: cover;
   border-radius: 1000px;
   width: var(--SIZE);
   height: var(--SIZE);
